--- a/imobiles/Base.lproj/Main.storyboard
+++ b/imobiles/Base.lproj/Main.storyboard
@@ -509,63 +509,126 @@
             </objects>
             <point key="canvasLocation" x="1623" y="-1785"/>
         </scene>
-        <!--Todo List-->
-        <scene sceneID="nED-uq-tUZ">
+        <!--Detail View Controller-->
+        <scene sceneID="7ab-R2-QoO">
             <objects>
-                <tableViewController id="zMe-AN-NI0" customClass="TodoViewController" customModule="imobiles" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="4bh-rN-OaV">
+                <viewController id="LHU-SA-LAU" customClass="DetailViewController" customModule="imobiles" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hds-Ry-W5X">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gAw-ga-DDB">
+                                <rect key="frame" x="169.66666666666666" y="357.66666666666669" width="75" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="gAw-ga-DDB" firstAttribute="centerY" secondItem="hds-Ry-W5X" secondAttribute="centerY" id="WOk-zJ-uol"/>
+                            <constraint firstItem="gAw-ga-DDB" firstAttribute="centerX" secondItem="hds-Ry-W5X" secondAttribute="centerX" id="yJq-Iv-beV"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Xfk-JH-Dk7"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="6Ff-4o-4fy"/>
+                    <connections>
+                        <outlet property="Label" destination="gAw-ga-DDB" id="oIv-Vw-I2h"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1UQ-pD-FQ5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4991.304347826087" y="-2470.108695652174"/>
+        </scene>
+        <!--Todo List-->
+        <scene sceneID="NVj-M5-B21">
+            <objects>
+                <tableViewController clearsSelectionOnViewWillAppear="NO" id="ar8-pU-blu" customClass="TodoViewController" customModule="imobiles" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Ppv-ew-ZFG">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Item" id="nfs-Ev-BHl">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Item" id="gls-c0-s5I">
                                 <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nfs-Ev-BHl" id="g42-d3-Ndh">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gls-c0-s5I" id="aVJ-gm-FKJ">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="Rq9-Xe-vq5" kind="showDetail" identifier="ShowDetails" id="71f-Oe-SFw"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="zMe-AN-NI0" id="5um-6v-mqm"/>
-                            <outlet property="delegate" destination="zMe-AN-NI0" id="2NP-Q8-oF6"/>
+                            <outlet property="dataSource" destination="ar8-pU-blu" id="GtP-Vd-HFe"/>
+                            <outlet property="delegate" destination="ar8-pU-blu" id="aD1-fJ-e5i"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todo List" id="Ixf-A1-PXZ">
-                        <barButtonItem key="leftBarButtonItem" title="Main" id="hPC-jE-wNA">
+                    <navigationItem key="navigationItem" title="Todo List" id="NLx-zS-s2l">
+                        <barButtonItem key="leftBarButtonItem" title="Main" id="WEB-Am-i18">
                             <connections>
-                                <action selector="MainViewButton:" destination="zMe-AN-NI0" id="HoE-b1-Z8V"/>
+                                <action selector="MainViewButton:" destination="ar8-pU-blu" id="gHJ-Ua-NwA"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="1pD-4R-WAq">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="iKd-R2-hPL">
                             <connections>
-                                <action selector="addButtonPressed:" destination="zMe-AN-NI0" id="ErQ-Tv-OLV"/>
+                                <action selector="addButtonPressed:" destination="ar8-pU-blu" id="KFv-Uz-DJv"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qaE-o3-oBf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6kj-Je-vvf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3836" y="-1827"/>
+            <point key="canvasLocation" x="5009" y="-3129"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="rJI-DH-JiL">
+        <scene sceneID="rgr-gh-0Py">
             <objects>
-                <navigationController storyboardIdentifier="TodoList" automaticallyAdjustsScrollViewInsets="NO" id="r5x-2Y-Whi" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="vax-GB-5o5">
+                <navigationController id="Mqe-tK-hqF" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="VH9-ec-qOP">
                         <rect key="frame" x="0.0" y="20" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="ar8-pU-blu" kind="relationship" relationship="rootViewController" id="dLj-3F-afp"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z82-sk-YP3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4085" y="-3129"/>
+        </scene>
+        <!--Split View Controller-->
+        <scene sceneID="eZ6-2O-5uz">
+            <objects>
+                <splitViewController storyboardIdentifier="Master" id="8FR-xz-Mr6" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="Mqe-tK-hqF" kind="relationship" relationship="masterViewController" id="g9G-8M-buU"/>
+                        <segue destination="Rq9-Xe-vq5" kind="relationship" relationship="detailViewController" id="aDv-ZW-V0v"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gco-dC-EHV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3167" y="-2800"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Z13-HQ-3bc">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Rq9-Xe-vq5" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="CaF-bF-9E3">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="zMe-AN-NI0" kind="relationship" relationship="rootViewController" id="Wza-Tn-kGb"/>
+                        <segue destination="LHU-SA-LAU" kind="relationship" relationship="rootViewController" id="Dfj-54-jx9"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9Yb-6u-fYS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ViH-Wb-i80" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2898" y="-1827"/>
+            <point key="canvasLocation" x="4084.057971014493" y="-2470.108695652174"/>
         </scene>
     </scenes>
     <resources>
@@ -574,4 +637,7 @@
         <image name="fill_form-512" width="512" height="512"/>
         <image name="focus" width="150" height="150"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="71f-Oe-SFw"/>
+    </inferredMetricsTieBreakers>
 </document>
